CHANGES IN VERSION 1.6.0
------------------------

NEW FEATURES

    o log_string_pval(): small utility function to obtain the log of
      string-formatted p-values (such as those often carried in
      MEME-formatted motifs). Likely only a temporary solution.

    o view_motifs(..., return.raw) option: instead of returning a plot
      type object, return the aligned motif matrices.

CHANGES IN VERSION 1.4.3
------------------------

BUG FIXES

    o Suppress message output from library(TFBSTools) call in
      MotifManipulation.pdf vignette preamble code.

CHANGES IN VERSION 1.4.2
------------------------

BUG FIXES

    o Stopped using BiocStyle, as a current bug was preventing the package from
      building successfully

CHANGES IN VERSION 1.4.1
------------------------

BUG FIXES

    o When using create_motif() with an AAStringSet object, amino acid letters
      will now be properly sorted and match the motif rows.

CHANGES IN VERSION 1.4.0
------------------------

NEW FEATURES

    o scan_sequences(..., threshold.type) option: 'logodds.abs'. Allows
      the exact threshold scores to be provided.

    o compare_motifs() option: 'min.position.ic'. Prevent low-IC positions in
      an alignment from contributing to the final alignment score.

    o compare_motifs() option: 'score.strat'. Instruct the function how to deal
      with individual column scores in an alignment. This is also replaced
      the old way of choosing between sum and mean via prepending an 'M' to the
      metric name. Strategies for combining column scores include: sum,
      arithmetic mean, geometric mean, median, Fisher Z-transform, and weighted
      means.

    o Motif comparison metrics: average log-likelihood ratio, squared Euclidean
      distance, Hellinger distance, Bhattacharyya coefficient, Manhattan
      distance, lower limit average log-likelihood ratio, weighted Euclidean
      distance, weighted Pearson correlation coefficient.
