@@ -32,7 +32,7 @@ clean:
 	mkdir -p Rcheck;\
 	cd ..;\
 	mv -f $(PKGNAME).Rcheck $(PKGSRC)/Rcheck/$(PKGNAME).Rcheck_$(PKGVER); \
-	mv -f $(PKGNAME)_$(PKGVER).tar.gz -t $(PKGNAME)/builds
+	mv -f ../$(PKGNAME)_$(PKGVER).tar.gz -t $(PKGNAME)/builds
 
 .PHONY: vignettes benchmarks
 
