@@ -51,6 +51,7 @@ export(read_meme)
 export(read_motifs)
 export(read_transfac)
 export(read_uniprobe)
+export(round_motif)
 export(rowMeans)
 export(rowSums)
 export(rownames)
