@@ -121,6 +121,10 @@ universalmotif_to_list <- function(motif) {
     .Call('_universalmotif_universalmotif_to_list', PACKAGE = 'universalmotif', motif)
 }
 
+round_motif_cpp <- function(mot, pct_tolerance) {
+    .Call('_universalmotif_round_motif_cpp', PACKAGE = 'universalmotif', mot, pct_tolerance)
+}
+
 pval_str2double <- function(pval) {
     .Call('_universalmotif_pval_str2double', PACKAGE = 'universalmotif', pval)
 }
